# AttackCastle

./: .gitignore  README.md  attackcastlegui.py  pyproject.toml  tmp_exts_state.json  tmp_workspace_ui.json
debian/: attackcastle.desktop  attackcastle.install  changelog  control  copyright  rules
debian/tests/: smoke
docs/: adapter-sdk.md  architecture.md  debian-packaging-and-repo.md  template-authoring.md
reports/: w20.docx
scripts/: build-apt-repo.sh  build-deb.sh
src/attackcastle/: __init__.py  __main__.py  app.py  cli.py  cli_runtime.py  cli_ux.py  config_loader.py  proxy.py  readiness.py  scan_policy.py
tests/fixtures/: report_viewmodel_snapshot.json
tests/integration/: test_end_to_end_deterministic.py
tests/unit/: test_active_validation_adapters.py  test_adaptive_execution_controller.py  test_adaptive_orchestration.py  test_app_logging.py  test_audit_chain.py  test_classifier.py  test_cli_audience_defaults.py  test_cli_profile_commands.py  test_cli_readiness.py  test_cli_report_open.py  test_cli_run_dashboard.py  test_cli_run_dir_resolution.py  test_cli_ux.py  test_command_runner.py  test_config_loader.py  test_cve_enricher_adapter.py  test_dependency_bootstrap.py  test_detection_rule_engine.py  test_distributed.py  test_distributed_queue.py  test_escalation_matrix.py  test_external_exposure_adapters.py  test_findings_library.py  test_findings_matcher.py  test_findings_normalizer.py  test_findings_quality.py  test_findings_templates.py  test_graph_outputs.py  test_gui_assets_tab.py  test_gui_attacker_tab.py  test_gui_configuration_tab.py  (+51 more)
(+307 files in other folders)
